[gd_scene load_steps=4 format=3 uid="uid://0bt5jyw2m8r"]

[ext_resource type="Script" uid="uid://3fjl2aalqqkk" path="res://scripts/game_hud.gd" id="1_hud"]
[ext_resource type="Texture2D" uid="uid://defes8gvj5sg1" path="res://assets/UI/PNG/bubble/table.png" id="2_table"]
[ext_resource type="PackedScene" uid="uid://b8k3m2n4p5q6r" path="res://scenes/ObjectTypePanel.tscn" id="3_type_panel"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="InventoryPanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 0
texture = ExtResource("2_table")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="InventoryTitle" type="Label" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Инвентарь"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="InventoryItems" type="VBoxContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Нажмите E для взаимодействия с верстаком
Нажмите Escape для паузы"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CraftMessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ObjectTypePanel" parent="." instance=ExtResource("3_type_panel")]
layout_mode = 1
